Add Serializable as simpleType